@@ -20,7 +20,9 @@ public:
 
    virtual ~Getable();
 
-	enum gflags { NoGet, NoDrop, Food, Rope };
+	enum gflags { NoGet, NoDrop, Food, Rope, LuckFast, ThiefOnly, Extinguish, BlockMagic };
+
+	enum descstates { Pristine, Dropped, Lit, Depleted, Custom };
 
    // Gets the primary reference name the game refers to this entity by
    virtual const char *getGameName(std::string &buf) const;
@@ -30,11 +32,11 @@ public:
 	// virtual const char *getDesc() const { return _desc.c_str(); };
    void setTitle(const char *newtitle);
 
-
 	// Manages the roomdesc--the description one sees when they look in the room
-	void pushRoomDesc(const char *new_desc);
-	void popRoomDesc();
+	void setRoomDesc(descstates new_state, const char *new_desc, const char *customname = NULL);
+	void changeRoomDesc(descstates, const char *customname = NULL);
 	const char *getRoomDesc();
+
    const char *getTitle() const { return _title.c_str(); };
 
    virtual const char *listContents(std::string &buf, const Physical *exclude = NULL) const;
@@ -52,9 +54,11 @@ protected:
 private:
 
 	std::string _title;
-	std::stack<std::string> _roomdesc;	
+	std::vector<std::pair<std::string, std::string> > _roomdesc;
 
 	std::bitset<32> _getflags;
+
+	unsigned int _dstate = (unsigned int) Pristine;
 };
 
 #endif
