@@ -8,7 +8,7 @@
 #include "Getable.h"
 #include "Door.h"
 
-const char *sflag_list[] = {"container", "lockable", "notcloseable", "lightable", "magiclit", NULL};
+const char *sflag_list[] = {"container", "lockable", "notcloseable", "lightable", "magiclit", "nosummon", NULL};
 
 
 /*********************************************************************************************
